# intent-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt  verify_phase10.py  verify_phase11.py  verify_phase2.py  verify_phase3.py  verify_phase9.py
.github/workflows/: ci.yml  train.yml
api/: main.py  schemas.py
api/routes/: models.py  monitoring.py  predict.py
app/: api_client.py  streamlit_app.py
app/pages/: compare.py  monitoring.py  predict.py
artifacts/: distilbert_report.txt  label_map.json  logistic-regression_report.txt  lstm_report.txt  rnn_report.txt  textcnn_report.txt
artifacts/evaluation/: distilbert_top_confused_pairs.csv  logreg_top_confused_pairs.csv  lstm_top_confused_pairs.csv  rnn_top_confused_pairs.csv  svm_top_confused_pairs.csv  textcnn_top_confused_pairs.csv
artifacts/monitoring/: current_data.csv  reference_data.csv
configs/: classical.yaml  neural.yaml  transformer.yaml
data/raw/: test.csv  train.csv  validation.csv
mlartifacts/1/4fd4e3a28a0a4ac9a3c20ca524cc8382/artifacts/: lstm_report.txt
mlartifacts/1/848facfe820d4bcfadd01c8494eb8ec0/artifacts/: textcnn_report.txt
mlartifacts/1/85ae715eaa7d43f8a9b2f06a39423c77/artifacts/: svm_report.txt
scripts/: download_artifacts.py  generate_label_map.py  modal_inference.py  modal_train.py
src/data/: loader.py  preprocessor.py
src/evaluation/: evaluate_all.py  metrics.py
src/features/: tfidf.py
src/models/: classical.py  neural.py  transformer.py
src/monitoring/: drift.py
src/serving/: ab_router.py  predictor.py
src/storage/: s3.py
src/training/: register_models.py  train_classical.py  train_neural.py  train_transformer.py
src/utils/: config.py  mlflow_utils.py  settings.py
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_models.py  test_monitoring.py  test_serving.py
(+1 files in other folders)
