[project]
name = "intent-classifier"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "mlflow>=2.12.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "streamlit>=1.34.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "boto3>=1.34.0",
    "evidently>=0.4.30",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ruff>=0.4.0",
    "accelerate>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
