[project]
name = "intent-classifier"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "transformers==4.51.3",
    "accelerate==1.5.2",
    "datasets==3.3.2",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "mlflow==2.21.3",
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "streamlit==1.43.2",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
    "boto3==1.37.38",
    "evidently==0.7.5",
    "httpx==0.28.1",
    "pydantic-settings==2.8.1",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "scikit-learn==1.6.1",
    "pytest==8.3.5",
    "ruff==0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]